--- a/FRONTENDALONDRA/Frontend/style.css
+++ b/FRONTENDALONDRA/Frontend/style.css
@@ -137,12 +137,14 @@ footer {
 }
 
 .subtitulo {
+    width: 80%;
     background-color: rgb(61, 148, 54);
     box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
     border-style: none;
     border-radius: 20px;
     padding: 20px;
     margin-top: 5%;
+    margin-left: 10%;
     text-align: center;
 }
 
@@ -425,9 +427,14 @@ a {
 
 
 /*Estilos index*/
-
-
 /*por ahora está vacío*/
+
+.placeholderBox{
+
+    width: 100%;
+    /*MODIFICAR*/
+    height: 300px;
+}
 
 
 /*Estilo Nosotros*/
@@ -442,9 +449,34 @@ a {
     margin: 0px;
 }
 
+/*QUIENES SOMOS FONDO*/
+
 .testi {
     text-align: center;
+    width: 80%;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-bottom: 10%;
+    background-color: rgba(200, 138, 77);
+    border-radius: 20px;
+    border-style: none;
+    box-shadow: 0px 0px 30px 30px rgba(200, 138, 77, 0.568);
+    
 }
+
+.subNombre {
+    width: 80%;
+    background-color: rgba(156, 87, 18, 0.568);
+    box-shadow: 0px 0px 5px 5px rgba(156, 87, 18, 0.568);
+    border-style: none;
+    border-radius: 15px;
+    padding: 20px;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-bottom: 10%;
+    text-align: center;
+}
+
 
 .MiR,
 .DM,
@@ -453,6 +485,22 @@ a {
 .MaR {
     width: 25%;
     margin: 2em;
+    opacity: 0.2;
+}
+
+/*ANIMACION NOSOTROS*/
+
+.MiR:hover,
+.DM:hover,
+.PR:hover,
+.AV:hover,
+.MaR:hover {
+    width: 25%;
+    margin: 2em;
+    opacity: 1;
+    border-style: solid;
+    border-radius: 10px;
+    transition: 1s ease-in;
 }
 
 .MDP,
@@ -465,6 +513,7 @@ a {
 .ID {
     width: 50%;
     border-radius: 100%;
+    margin-bottom: 10%;
 }
 
 .name {
@@ -473,7 +522,7 @@ a {
 }
 
 
-/*Contacto*/
+/*ESTILOS Contacto*/
 
 .contact {
     font-size: 4em;
@@ -484,8 +533,34 @@ a {
     margin: 0px;
 }
 
+/*ESTILO FORM CONTACTO*/
+#form1 {
+    margin-top: 5%;
+    margin-bottom: 10%;
+    /*CENTRAR, PLEASE*/
+    margin-left: 29%;
+    min-width: 30%;
+    max-width: 600px;
+    background: rgba(200, 138, 77, 0.918);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px rgba(200, 138, 77, 0.568);
+    color: white;
+    justify-content: center;
+    text-align: center;
+}
+
 .correo {
     text-align: center;
+}
+
+/*hover boton enviar*/
+#send {
+    opacity: 0.7;
+}
+
+#send:hover {
+    opacity: 1;
 }
 
 
@@ -498,6 +573,7 @@ a {
 .reg {
     margin-bottom: 60px;
 }
+
 
 .registro1 {
     display: flex;
@@ -548,8 +624,12 @@ a {
 .registro {
     width: 650px;
     background: rgba(200, 138, 77, 0.918);
+    box-shadow: 0 0 30px rgba(200, 138, 77, 0.568);
     padding: 30px;
-    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    /*CHECAR CENTRADO PLEASE*/
+    margin-left: 27%;
     border-radius: 10px;
     font-family: 'Press Start 2P';
 }
@@ -651,6 +731,7 @@ input {
     border-radius: 10px;
     background: rgba(113, 62, 5, 0.5);
     padding: 20px;
+    opacity: 0.5;
 }
 
 .olvide1:hover {
@@ -658,6 +739,7 @@ input {
     text-decoration-style: none;
     text-decoration-line: none;
     cursor: pointer;
+    opacity: 1;
 }
 
 /* ESTILOS HEADER SEMILLITA */
@@ -687,4 +769,92 @@ input {
     display: flex;
     flex-direction: row;
     width: 20%;
+}
+
+/*MICHAEL, VISTA REGISTRO*/
+
+.wrapper {
+
+    margin: auto;
+    display: grid;
+    place-items: center;
+}
+
+.container1 {
+    display: grid;
+    place-items: center;
+    height: 700px;
+    width: 900px;
+    background-image: url("./disenio/Imagen_libro.gif");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.tabla1 {
+
+    height: 68%;
+    width: 78%;
+    margin-right: 1em;
+    margin-left: 1em;
+
+}
+
+.col {
+
+    margin-right: 1em;
+    margin-left: 1em;
+    padding: 1em;
+}
+
+.columna1 {
+
+    font-size: 75%;
+}
+
+.columna1 p {
+    color: black;
+}
+
+/*BOTON ANIMADO REGISTRARSE*/
+#btn1 {
+    width: 60%;
+    height: 10%;
+    color: black;
+    opacity: 0.5;
+}
+
+#btn1:hover {
+    opacity: 1;
+}
+
+.columna2 {
+    margin-left: 3em;
+
+}
+
+.imagen_libro {
+    height: 600px;
+    width: 1000px;
+    object-fit: cover;
+    text-align: center;
+}
+
+.btn-selector {
+
+
+    width: 100%;
+    height: 10%;
+    margin-top: 30px;
+    display: block;
+
+}
+
+.grupobtn {
+
+    display: inline-flex;
+    justify-content: center;
+    padding: 8px;
+    margin-left: 17px;
+
 }
