--- a/Front End/Frontend/style.css
+++ b/Front End/Frontend/style.css
@@ -2,13 +2,19 @@
 
 * {
     font-family: 'Press Start 2P', cursive;
-    background-color: #21a6ff;
+}
+
+body {
+    background: url(disenio/background-nube.png);
     color: aliceblue;
 }
 
+/*IMAGEN TAMAGO INICIO PAGINA*/
 .img {
-    margin: 1px;
-    width: 50%;
+    width: 40%;
+    height: 60%;
+    margin-top: 50px;
+    margin-left: 50px;
 }
 
 h1 {
@@ -18,7 +24,25 @@ h1 {
 
 
 /*Nav bar*/
+.navv {
+    background-color: #ffffff;
+    font-size: large;
+    min-height: 100%;
+    width: 90%;
+    margin-top: 3%;
+    margin-left: 5%;
+    justify-content: space-around;
+    opacity: 0.7;
+}
 
+.navv:hover {
+    opacity: 1.0;
+}
+
+/*PISO MARIO CASTLE
+.floor{
+    
+}*/
 
 /*Banner*/
 
@@ -69,7 +93,6 @@ h1 {
     color: rgb(250, 137, 8);
     margin-top: 35px;
     background-color: rgba(0, 0, 0, 0);
-    background: purple;
 }
 
 .nompag {
@@ -82,26 +105,336 @@ footer {
 }
 
 .GN {
-    width: 7%;
+    width: 15%;
+    margin-bottom: -80px;
 }
 
 .RS {
-    background: url(./public/pasto.png) center;
+    background: url(disenio/pasto.png) center;
     width: 100%;
+    height: 200px;
 }
 
 .img-tw,
 .img-ig,
 .img-fb {
-    width: 3%;
+    padding-top: 4%;
+    padding-right: 3%;
+    vertical-align: middle;
+    align-items: center;
+    width: 6%;
+    margin-bottom: 20px;
+    margin-left: 3%;
     background: rgba(0, 0, 0, 0);
+    justify-content: space-around;
+
+}
+
+/*estilos etapas*/
+
+.nav-link:hover {
+    color: #ca8114;
+}
+
+.subtitulo {
+    width: 80%;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+    border-style: none;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 5%;
+    margin-left: 10%;
+    text-align: center;
+}
+
+body {
+    overflow: visible
+}
+
+/*BOXES ETAPAS*/
+
+/*TITULOS NIVELES*/
+
+.nivel1 {
+    display: flex;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+    border-style: none;
+    width: 60%;
+    padding: 20px;
+    margin-top: 10%;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.h4center {
+    padding-left: 30%;
+}
+
+.nivel2 {
+    display: flex;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+    border-style: none;
+    width: 60%;
+    padding: 20px;
+    margin-top: 30px;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.nivel3 {
+    display: flex;
+    background-color: rgb(24, 24, 26);
+    box-shadow: 0px 0px 5px 5px rgba(24, 24, 26, 0.7);
+    border-style: none;
+    width: 60%;
+    padding: 20px;
+    margin-top: 30px;
+    border-radius: 20px;
+    text-align: center;
+    opacity: 0.7;
+}
+
+.h5center {
+    padding-left: 30%;
+}
+
+/*A LINK ETAPAS, TEXTO SIN UNDERSCORE*/
+.nivelFont {
+    color: #ffffff;
+}
+
+a {
+    text-decoration: none;
+}
+
+
+/*BOXES NIVELES*/
+
+.boxNivel {
+    display: flex;
+    padding-top: 15px;
+    margin-top: -20px;
+    background-color: rgb(61, 148, 54);
+    border-style: none;
+    border-radius: 10px;
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+}
+
+.boxSoon {
+    display: flex;
+    padding-top: 15px;
+    background-color: rgb(24, 24, 26);
+    ;
+    border-style: hidden;
+    border-radius: 10px;
+    width: 200px;
+    height: 50px;
+    justify-content: center;
+    opacity: 0.7;
+}
+
+#proximamente {
+    font-size: small;
+}
+
+.box1 {
+    display: block;
+    background-image: url("disenio/Picture1.png");
+    background-size: 100%;
+    background-position: center;
+    background-clip: border-box;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: rgb(101, 207, 117);
+    border-radius: 20px;
+    box-shadow: 5px 5px 30px 30px rgba(101, 207, 117, 0.7);
+    min-width: 400px;
+    max-width: 1000px;
+    min-height: 450px;
+    max-height: 500px;
+    opacity: 0.4;
+}
+
+.box1:hover {
+    opacity: 1;
+}
+
+.box2 {
+    display: block;
+    background-image: url("disenio/juego2.png");
+    background-size: 100%;
+    background-position: center;
+    background-clip: border-box;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: rgb(101, 207, 117);
+    border-radius: 20px;
+    box-shadow: 5px 5px 30px 30px rgba(101, 207, 117, 0.7);
+    min-width: 400px;
+    max-width: 1000px;
+    min-height: 450px;
+    max-height: 500px;
+    opacity: 0.4;
+}
+
+.box2:hover {
+    opacity: 1;
+}
+
+/*BOXES ETAPAS PROXIMAMENTE*/
+.box3 {
+    display: block;
+    background-color: gray;
+    background-image: url("disenio/undercons.png");
+    background-repeat: no-repeat;
+    background-size: 150px;
+    background-position: center;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: gray;
+    border-radius: 20px;
+    box-shadow: 5px 5px 30px 30px rgba(95, 95, 102, 0.7);
+    min-width: 400px;
+    max-width: 1000px;
+    min-height: 450px;
+    max-height: 500px;
+    opacity: 0.7;
+}
+
+/*estilos contenidos*/
+
+.subtitulo1 {
+    width: 130%;
+    padding: 20px;
+    margin-top: 5%;
+    margin-left: -15%;
+    border-style: none;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+}
+
+.descCont {
+    display: flex;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+    border-style: none;
+    width: 100%;
+    padding: 20px;
+    margin-top: 10%;
+    margin-left: -20%;
+    margin-bottom: 10%;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.boxCont1 {
+    display: flex;
+    padding-top: 15px;
+    margin-top: -20px;
+    background-color: rgb(61, 148, 54);
+    border-style: none;
+    border-radius: 10px;
+    width: 60%;
+    height: 120%;
+    justify-content: center;
+    text-align: center;
+}
+
+.boxContA {
+    display: block;
+    background-image: url("disenio/juego2.png");
+    background-size: 100%;
+    background-position: center;
+    background-clip: border-box;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: rgb(101, 207, 117);
+    border-radius: 20px;
+    box-shadow: 5px 5px 30px 30px rgba(101, 207, 117, 0.7);
+    min-width: 400px;
+    max-width: 1000px;
+    min-height: 450px;
+    max-height: 500px;
+    opacity: 0.4;
+}
+
+.boxContA:hover {
+    opacity: 1;
+}
+
+.boxContB {
+    display: block;
+    background-image: url("disenio/html.JPG");
+    background-size: 100%;
+    background-position: center;
+    background-clip: border-box;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: rgb(101, 207, 117);
+    border-radius: 20px;
+    box-shadow: 5px 5px 30px 30px rgba(101, 207, 117, 0.7);
+    min-width: 400px;
+    max-width: 1000px;
+    min-height: 450px;
+    max-height: 500px;
+    opacity: 0.4;
+}
+
+.boxContB:hover {
+    opacity: 1;
+}
+
+/*ESTILOS MODULO*/
+
+.boxContC {
+    display: block;
+    background-image: url("disenio/helloWorld.jpg");
+    background-size: 100%;
+    background-position: center;
+    background-clip: border-box;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    border-style: solid;
+    border-width: 10px;
+    border-color: rgb(101, 207, 117);
+    border-radius: 20px;
+    box-shadow: 5px 5px 30px 30px rgba(101, 207, 117, 0.7);
+    min-width: 400px;
+    max-width: 1000px;
+    min-height: 450px;
+    max-height: 500px;
+    opacity: 0.4;
+}
+
+.boxContC:hover {
+    opacity: 1;
 }
 
 
 /*Estilos index*/
-
-
 /*por ahora está vacío*/
+
+.placeholderBox{
+
+    width: 100%;
+    /*MODIFICAR*/
+    height: 300px;
+}
 
 
 /*Estilo Nosotros*/
@@ -116,28 +449,80 @@ footer {
     margin: 0px;
 }
 
+/*QUIENES SOMOS FONDO*/
+
+.testi {
+    text-align: center;
+    width: 80%;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-bottom: 10%;
+    background-color: rgba(200, 138, 77);
+    border-radius: 20px;
+    border-style: none;
+    box-shadow: 0px 0px 30px 30px rgba(200, 138, 77, 0.568);
+    
+}
+
+.subNombre {
+    width: 80%;
+    background-color: rgba(156, 87, 18, 0.568);
+    box-shadow: 0px 0px 5px 5px rgba(156, 87, 18, 0.568);
+    border-style: none;
+    border-radius: 15px;
+    padding: 20px;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-bottom: 10%;
+    text-align: center;
+}
+
+
 .MiR,
-.PR,
-.MaR,
 .DM,
-.AV {
+.PR,
+.AV,
+.MaR {
+    width: 25%;
+    margin: 2em;
+    opacity: 0.2;
+}
+
+/*ANIMACION NOSOTROS*/
+
+.MiR:hover,
+.DM:hover,
+.PR:hover,
+.AV:hover,
+.MaR:hover {
+    width: 25%;
+    margin: 2em;
+    opacity: 1;
+    border-style: solid;
+    border-radius: 10px;
+    transition: 1s ease-in;
+}
+
+.MDP,
+.AM {
     display: flex;
     flex-direction: row;
-    margin: 20px;
+    justify-content: center;
 }
 
 .ID {
-    width: 25%;
-    border-radius: 1000px;
+    width: 50%;
+    border-radius: 100%;
+    margin-bottom: 10%;
 }
 
 .name {
-    margin-top: 50px;
+    margin-top: 3em;
     color: yellow;
 }
 
 
-/*Contacto*/
+/*ESTILOS Contacto*/
 
 .contact {
     font-size: 4em;
@@ -148,38 +533,84 @@ footer {
     margin: 0px;
 }
 
-.tabla table {
-    list-style-type: square;
-    font-size: 1em;
-    font-weight: 50;
-    text-align: left;
-    font-family: 'Times New Roman', Times, serif;
+/*ESTILO FORM CONTACTO*/
+#form1 {
+    margin-top: 5%;
+    margin-bottom: 10%;
+    /*CENTRAR, PLEASE*/
+    margin-left: 29%;
+    min-width: 30%;
+    max-width: 600px;
+    background: rgba(200, 138, 77, 0.918);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px rgba(200, 138, 77, 0.568);
+    color: white;
+    justify-content: center;
+    text-align: center;
+}
+
+.correo {
+    text-align: center;
+}
+
+/*hover boton enviar*/
+#send {
+    opacity: 0.7;
+}
+
+#send:hover {
+    opacity: 1;
 }
 
 
 /*Estilos Registro*/
+.regis {
+
+    background: url(./public/castillo.png) center no-repeat;
+}
+
+.reg {
+    margin-bottom: 60px;
+}
+
 
 .registro1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-top: 5em;
-    background: url(./public/castillo.png);
 }
 
-.img-est {
-    width: 200px;
-    background: rgba(0, 0, 0, 0);
+.profe {
+    width: 25%;
+    padding: 2em;
+    margin-left: 3em;
+    color: whitesmoke;
+    text-align: center;
+    border: #213567 solid 5px;
+    border-radius: 20%;
+    background-color: rgba(0, 0, 0, .3);
 }
 
+.est {
+    width: 25%;
+    padding: 2em;
+    color: whitesmoke;
+    text-align: center;
+    border: #1e3d8a solid 5px;
+    border-radius: 20%;
+    background-color: rgba(0, 0, 0, .3);
+}
+
+.img-est,
 .img-profe {
-    width: 200px;
+    min-width: 100px;
+    width: 50%;
 }
 
 .img-padre {
     width: 72%;
 }
-
 
 /*estilos codigo*/
 
@@ -188,14 +619,17 @@ footer {
     flex-direction: row;
 }
 
-
 /*Estilo estudiante profesor*/
 
 .registro {
     width: 650px;
     background: rgba(200, 138, 77, 0.918);
+    box-shadow: 0 0 30px rgba(200, 138, 77, 0.568);
     padding: 30px;
-    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    /*CHECAR CENTRADO PLEASE*/
+    margin-left: 27%;
     border-radius: 10px;
     font-family: 'Press Start 2P';
 }
@@ -213,20 +647,38 @@ input {
 
 /*iniciar sesion*/
 
+.cont1 {
+    display: flex;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+    border-style: none;
+    width: 60%;
+    padding: 20px;
+    margin-top: 10%;
+    border-radius: 20px;
+    text-align: center;
+}
+
 .formulario {
+    margin-top: 5%;
+    min-width: 30%;
+    max-width: 600px;
     background: rgba(200, 138, 77, 0.918);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 30px rgba(200, 138, 77, 0.568);
     color: white;
+    transition: 1s ease-in;
 }
 
 .form-control {
     background: rgb(136, 68, 34, 0.313);
     border-style: none;
-    transition: 0.5s ease-in;
+    transition: 1s ease-in;
     outline: none;
     box-shadow: none;
+    padding: 30px;
+    margin-top: 10px;
 }
 
 .form-control:focus {
@@ -240,10 +692,12 @@ input {
 }
 
 .ingresar {
-    background: #222A3F;
-    padding: 10px;
+    background: #ca8114;
+    margin: 5%;
+    padding-top: 20px;
+    padding: 20px;
     font-size: 16px;
-    font-weight: 700px!important;
+    font-weight: 500px !important;
     color: white;
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
     transition: 0.5s ease-in;
@@ -271,11 +725,13 @@ input {
     text-decoration-style: none;
     text-decoration-line: none;
     font-size: 20px;
-    font-weight: 700!important;
+    font-weight: 700 !important;
     /* border: 2px solid white; */
     padding: 10px;
     border-radius: 10px;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(113, 62, 5, 0.5);
+    padding: 20px;
+    opacity: 0.5;
 }
 
 .olvide1:hover {
@@ -283,4 +739,122 @@ input {
     text-decoration-style: none;
     text-decoration-line: none;
     cursor: pointer;
+    opacity: 1;
+}
+
+/* ESTILOS HEADER SEMILLITA */
+.a {
+    margin-top: 10px;
+    width: 30%;
+}
+
+.b {
+    margin-top: 10px;
+    margin-left: -20%;
+    width: 200%;
+}
+
+.c {
+    margin-top: 10px;
+    width: 200px;
+    height: 150px;
+}
+
+.k {
+    width: 150px;
+    height: 2em;
+}
+
+.kd {
+    display: flex;
+    flex-direction: row;
+    width: 20%;
+}
+
+/*MICHAEL, VISTA REGISTRO*/
+
+.wrapper {
+
+    margin: auto;
+    display: grid;
+    place-items: center;
+}
+
+.container1 {
+    display: grid;
+    place-items: center;
+    height: 700px;
+    width: 900px;
+    background-image: url("./disenio/Imagen_libro.gif");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.tabla1 {
+
+    height: 68%;
+    width: 78%;
+    margin-right: 1em;
+    margin-left: 1em;
+
+}
+
+.col {
+
+    margin-right: 1em;
+    margin-left: 1em;
+    padding: 1em;
+}
+
+.columna1 {
+
+    font-size: 75%;
+}
+
+.columna1 p {
+    color: black;
+}
+
+/*BOTON ANIMADO REGISTRARSE*/
+#btn1 {
+    width: 60%;
+    height: 10%;
+    color: black;
+    opacity: 0.5;
+}
+
+#btn1:hover {
+    opacity: 1;
+}
+
+.columna2 {
+    margin-left: 3em;
+
+}
+
+.imagen_libro {
+    height: 600px;
+    width: 1000px;
+    object-fit: cover;
+    text-align: center;
+}
+
+.btn-selector {
+
+
+    width: 100%;
+    height: 10%;
+    margin-top: 30px;
+    display: block;
+
+}
+
+.grupobtn {
+
+    display: inline-flex;
+    justify-content: center;
+    padding: 8px;
+    margin-left: 17px;
+
 }
