--- a/FRONTEND/Frontend/style.css
+++ b/FRONTEND/Frontend/style.css
@@ -11,9 +11,9 @@ body {
 
 /*IMAGEN TAMAGO INICIO PAGINA*/
 .img {
-    width: 40%;
-    height: 60%;
-    margin-top: 50px;
+    height:90%;
+    width: 80%;
+    margin-top: 30px;
     margin-left: 50px;
 }
 
@@ -25,14 +25,21 @@ h1 {
 
 /*Nav bar*/
 .navv {
-    background-color: #ffffff;
-    font-size: large;
+
+    text-align: center;
+    justify-content: center;
+    background-color: #c4d8b4;
+    font-size:x-large ;
     min-height: 100%;
-    width: 90%;
-    margin-top: 3%;
-    margin-left: 5%;
-    justify-content: space-around;
-    opacity: 0.7;
+    width: 80%;
+    margin: 5%;
+    opacity: 0.9;
+    height: 80px;
+    padding-top: 15px;
+}
+li{
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .navv:hover {
@@ -45,56 +52,6 @@ h1 {
 }*/
 
 /*Banner*/
-
-.kd {
-    display: flex;
-    flex-direction: row;
-    border-radius: 50px;
-}
-
-.k {
-    color: rgb(255, 0, 0);
-    margin-top: 37px;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.i {
-    color: yellow;
-    margin-top: 15px;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.d {
-    color: blue;
-    margin-top: 45px;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.s {
-    color: rgb(2, 254, 2);
-    margin-top: 15px;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.D1 {
-    color: rgb(136, 0, 154);
-    margin-left: 50px;
-    margin-top: 50px;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.y {
-    color: yellow;
-    margin-top: 15px;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.D2 {
-    color: rgb(250, 137, 8);
-    margin-top: 35px;
-    background-color: rgba(0, 0, 0, 0);
-}
-
 .nompag {
     display: flex;
     flex-direction: row;
@@ -105,7 +62,7 @@ footer {
 }
 
 .GN {
-    width: 15%;
+    width: 10%;
     margin-bottom: -80px;
 }
 
@@ -133,7 +90,7 @@ footer {
 /*estilos etapas*/
 
 .nav-link:hover {
-    color: #ca8114;
+    color:  rgb(71, 199, 71);
 }
 
 .subtitulo {
@@ -229,7 +186,6 @@ a {
     display: flex;
     padding-top: 15px;
     background-color: rgb(24, 24, 26);
-    ;
     border-style: hidden;
     border-radius: 10px;
     width: 200px;
@@ -427,6 +383,10 @@ a {
 
 
 /*Estilos index*/
+.video{
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
 /*por ahora está vacío*/
 
 .placeholderBox{
@@ -457,16 +417,13 @@ a {
     margin-top: 5%;
     margin-left: 10%;
     margin-bottom: 10%;
-    background-color: rgb(197, 147, 97);
-    border-radius: 20px;
-    border-style: none;
-    box-shadow: 0px 0px 30px 30px rgba(197, 147, 97);
+    
 }
 
 .subNombre {
     width: 80%;
-    background-color: rgba(156, 87, 18, 0.568);
-    box-shadow: 0px 0px 5px 5px rgba(156, 87, 18, 0.568);
+    background-color: rgba(108, 193, 108, 0.705);
+    box-shadow: 0px 0px 5px 5px rgba(41, 183, 62, 0.568);
     border-style: none;
     border-radius: 15px;
     padding: 20px;
@@ -484,8 +441,14 @@ a {
 .MaR {
     width: 25%;
     margin: 2em;
-    opacity: 0.5;
+    opacity: 0.9;
     justify-content: space-around;
+    background-color: rgb(94, 115, 135);
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px 5px rgba(41, 129, 183, 0.568);
+    border-style: none;
+    /*box-shadow: 0px 0px 30px 30px rgba(159, 210, 122, 0.5);
+    */
 }
 
 /*ANIMACION NOSOTROS*/
@@ -499,15 +462,17 @@ a {
     margin: 2em;
     opacity: 1;
     border-style: solid;
-    border-radius: 10px;
-    transition: 1s ease-in;
+    border-color: rgb(15, 47, 63);
+    border-radius: 20px;
+    transition: 0.2s ease-in;
+    background-color:  rgb(46, 73, 97)
 }
 
 .MDP,
 .AM {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-evenly   ;
 }
 
 .ID {
@@ -538,7 +503,7 @@ a {
     margin-top: 5%;
     margin-bottom: 10%;
     /*CENTRAR, PLEASE*/
-    margin-left: 29%;
+    margin-left: 35%;
     min-width: 30%;
     max-width: 600px;
     background: rgba(200, 138, 77, 0.918);
@@ -549,7 +514,9 @@ a {
     justify-content: center;
     text-align: center;
 }
-
+.wah{
+    text-align: center;
+}
 .correo {
     text-align: center;
 }
@@ -641,7 +608,7 @@ a {
 
 input {
     color: antiquewhite;
-    background-color: rgba(136, 68, 34, 0.313);
+    background-color: rgba(136, 68, 34, 0.34);
 }
 
 
@@ -658,21 +625,24 @@ input {
     border-radius: 20px;
     text-align: center;
 }
-
+.pared{
+    background: url(disenio/pared6.png) no-repeat center;
+}
 .formulario {
-    margin-top: 5%;
+    margin-top: 3%;
+    margin-bottom: 3%;
     min-width: 30%;
     max-width: 600px;
-    background: rgba(200, 138, 77, 0.918);
+    background: rgba(66, 30, 4, 0.7);
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 30px rgba(200, 138, 77, 0.568);
+    box-shadow: 0 0 30px rgba(198, 104, 9, 0.822);
     color: white;
     transition: 1s ease-in;
 }
 
 .form-control {
-    background: rgb(136, 68, 34, 0.313);
+    background: rgba(178, 78, 28, 0.866);
     border-style: none;
     transition: 1s ease-in;
     outline: none;
@@ -692,7 +662,7 @@ input {
 }
 
 .ingresar {
-    background: #ca8114;
+    background: #984a05;
     margin: 5%;
     padding-top: 20px;
     padding: 20px;
@@ -750,12 +720,12 @@ input {
 
 .b {
     margin-top: 10px;
-    margin-left: -20%;
+    margin-left: 0px;
     width: 200%;
 }
 
 .c {
-    margin-top: 10px;
+    margin-top: 55px;
     width: 200px;
     height: 150px;
 }
@@ -766,15 +736,16 @@ input {
 }
 
 .kd {
+    text-align: center;
     display: flex;
     flex-direction: row;
     width: 20%;
+    margin-left: 10%;
 }
 
 /*MICHAEL, VISTA REGISTRO*/
 
 .wrapper {
-
     margin: auto;
     display: grid;
     place-items: center;
@@ -783,8 +754,8 @@ input {
 .container1 {
     display: grid;
     place-items: center;
-    height: 700px;
-    width: 900px;
+    height: 900px;
+    width: 1100px;
     background-image: url("./disenio/Imagen_libro.gif");
     background-position: center;
     background-repeat: no-repeat;
@@ -792,28 +763,26 @@ input {
 }
 
 .tabla1 {
-
     height: 68%;
     width: 78%;
     margin-right: 1em;
     margin-left: 1em;
-
 }
 
 .col {
-
     margin-right: 1em;
     margin-left: 1em;
     padding: 1em;
 }
 
 .columna1 {
-
-    font-size: 75%;
+    font-size: 90%;
+    text-align: center;   
 }
 
 .columna1 p {
     color: black;
+    margin-bottom: 25px;
 }
 
 /*BOTON ANIMADO REGISTRARSE*/
@@ -830,7 +799,6 @@ input {
 
 .columna2 {
     margin-left: 3em;
-
 }
 
 .imagen_libro {
@@ -841,20 +809,15 @@ input {
 }
 
 .btn-selector {
-
-
     width: 100%;
     height: 10%;
     margin-top: 30px;
     display: block;
-
 }
 
 .grupobtn {
-
     display: inline-flex;
     justify-content: center;
     padding: 8px;
-    margin-left: 17px;
-
+    margin-left: 6em;
 }
