--- a/FRONTEND/semillita/src/App.css
+++ b/FRONTEND/semillita/src/App.css
@@ -167,3 +167,228 @@ footer {
     padding: 8px;
     margin-left: 6em;
 }
+
+/*ESTILOS Contacto*/
+
+.contact {
+    font-size: 4em;
+    text-align: center;
+    background: url(./imagenes/cuadricula.png) center no-repeat;
+    height: 80px;
+    color: black;
+    margin: 0px;
+}
+
+/*ESTILO FORM CONTACTO*/
+#form1 {
+
+    min-width: 30%;
+    max-width: 600px;
+    background: rgba(200, 138, 77, 0.918);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px rgba(200, 138, 77, 0.568);
+    color: white;
+    justify-content: center;
+    text-align: center;
+}
+.contacto{
+    text-align: center;
+}
+.correo {
+    text-align: center;
+}
+
+#send {
+    opacity: 0.7;
+}
+
+#send:hover {
+    opacity: 1;
+}
+
+.prueba{
+
+    display: grid;
+    place-items: center;
+}
+
+
+/*QUIENES SOMOS FONDO*/
+
+.testi {
+    text-align: center;
+    width: 80%;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-bottom: 10%;
+    
+}
+
+.subNombre {
+    width: 80%;
+    background-color: rgba(108, 193, 108, 0.705);
+    box-shadow: 0px 0px 5px 5px rgba(41, 183, 62, 0.568);
+    border-style: none;
+    border-radius: 15px;
+    padding: 20px;
+    margin-top: 5%;
+    margin-left: 10%;
+    margin-bottom: 10%;
+    text-align: center;
+}
+
+
+.MiR,
+.DM,
+.PR,
+.AV,
+.MaR {
+    width: 25%;
+    margin: 2em;
+    opacity: 0.9;
+    justify-content: space-around;
+    background-color: rgb(94, 115, 135);
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px 5px rgba(41, 129, 183, 0.568);
+    border-style: none;
+    /*box-shadow: 0px 0px 30px 30px rgba(159, 210, 122, 0.5);
+    */
+}
+
+/*ANIMACION NOSOTROS*/
+
+.MiR:hover,
+.DM:hover,
+.PR:hover,
+.AV:hover,
+.MaR:hover {
+    width: 25%;
+    margin: 2em;
+    opacity: 1;
+    border-style: solid;
+    border-color: rgb(15, 47, 63);
+    border-radius: 20px;
+    transition: 0.2s ease-in;
+    background-color:  rgb(46, 73, 97)
+}
+
+.MDP,
+.AM {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly   ;
+}
+
+.ID {
+    width: 50%;
+    border-radius: 100%;
+    margin-bottom: 10%;
+}
+
+.name {
+    margin-top: 3em;
+    color: yellow;
+}
+
+/*Login*/
+
+.cont1 {
+    display: flex;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+    border-style: none;
+    width: 60%;
+    padding: 20px;
+    margin-top: 10%;
+    border-radius: 20px;
+    text-align: center;
+}
+
+.pared{
+    background: url(imagenes/pared.png) no-repeat center;
+}
+
+.formulario {
+    margin-top: 3%;
+    margin-bottom: 3%;
+    min-width: 30%;
+    max-width: 600px;
+    background: rgba(66, 30, 4, 0.7);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 30px rgba(198, 104, 9, 0.822);
+    color: white;
+    transition: 1s ease-in;
+}
+
+.form-control {
+    background: rgba(178, 78, 28, 0.866);
+    border-style: none;
+    transition: 1s ease-in;
+    outline: none;
+    box-shadow: none;
+    padding: 30px;
+    margin-top: 10px;
+}
+
+.form-control:focus {
+    background: none;
+    box-shadow: none;
+    outline: none;
+}
+
+.form-control::placeholder {
+    color: white;
+}
+
+.ingresar {
+    background: #984a05;
+    margin: 5%;
+    padding-top: 20px;
+    padding: 20px;
+    font-size: 16px;
+    font-weight: 500px !important;
+    color: white;
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.568);
+    transition: 0.5s ease-in;
+}
+
+.ingresar:hover {
+    color: white;
+}
+
+.olvide {
+    color: white;
+    text-decoration-style: none;
+    text-decoration-line: none;
+}
+
+.olvide:hover {
+    color: white;
+    text-decoration-style: none;
+    text-decoration-line: none;
+    cursor: pointer;
+}
+
+.olvide1 {
+    color: white;
+    text-decoration-style: none;
+    text-decoration-line: none;
+    font-size: 20px;
+    font-weight: 700 !important;
+    /* border: 2px solid white; */
+    padding: 10px;
+    border-radius: 10px;
+    background: rgba(113, 62, 5, 0.5);
+    padding: 20px;
+    opacity: 0.5;
+}
+
+.olvide1:hover {
+    color: white;
+    text-decoration-style: none;
+    text-decoration-line: none;
+    cursor: pointer;
+    opacity: 1;
+}
