--- a/FRONTEND/semillita/src/App.css
+++ b/FRONTEND/semillita/src/App.css
@@ -8,6 +8,7 @@
 body {
     background: url(./imagenes/background-nube.png);
     overflow: visible;
+    width: 100%;
 }
 
 h1 {
@@ -68,6 +69,7 @@ link {
     min-height: 100%;
     width: 80%;
     margin: 5%;
+    margin-left: 10%;
     opacity: 0.8;
     height: 60px;
     padding-top: 10px;
@@ -203,10 +205,15 @@ place-items: center;
     margin-top: 20px;
 }
 
+.asdf{
+    width: 20%;
+    height: 60%;
+}
+
 /*BOTON ANIMADO REGISTRARSE*/
 #btn1 {
     margin-top: 20px;
-    width: 60%;
+    width: 45%;
     height: 10%;
     color: black;
     opacity: 0.5;
@@ -289,6 +296,7 @@ place-items: center;
 
 /*QUIENES SOMOS FONDO*/
 
+
 .testi {
     text-align: center;
     width: 80%;
@@ -310,7 +318,29 @@ place-items: center;
     margin-bottom: 10%;
     text-align: center;
 }
+.contenedor {
+    display: grid;
+    place-items: center;
+    position: relative;
+    height: 290px;
+    width: 290px;
+    margin: 50px 20px;
+  }
+.contenedor img {
+    position: absolute;
+    transition: opacity 0.7s ease-in-out;
+    width: 80%;
+    border-radius: 100%;
+    margin-bottom: 10%;
+    background-color:rgb(88, 107, 123);
+}
 
+.contenedor img.top:hover {
+    opacity: 0;
+        width: 80%;
+    border-radius: 100%;
+    margin-bottom: 10%;
+}
 
 .MiR,
 .PR,
@@ -350,9 +380,7 @@ place-items: center;
     flex-direction: row;
     justify-content: space-evenly   ;
 }
-.MiR .ID{
-    background-image: url("./imagenes/MIR.png");
-}
+
 .ID {
     width: 50%;
     border-radius: 100%;
