--- a/FRONTEND/semillita/src/App.css
+++ b/FRONTEND/semillita/src/App.css
@@ -43,13 +43,16 @@ link {
     margin-left: 30px;
     background-color:rgb(229, 229, 229);
     border-radius: 90%;
-    width: 100px;
+    min-width: 10%;
+    max-width: 30%;
     
 }
 
 .semillita {
-    margin-top: 30px;
-    margin-left: 0px;
+    margin-top: 40px;
+    margin-left: -20%;
+    min-width: 20%;
+    max-width: 100%;
 }
 
 
@@ -59,6 +62,7 @@ link {
     display: table;
 }
 
+/* ESTILOS NAVBAR */
 
 .navv {
     display: grid;
@@ -68,15 +72,18 @@ link {
     min-height: 100%;
     width: 80%;
     margin: 5%;
+    margin-left: 10%;
     opacity: 0.8;
     height: 60px;
     padding-top: 10px;
+    border-radius: 20px;
 }
 
 .navv:hover {
     background-color:rgb(179, 231, 187);
     opacity: 1.0;
 }
+
 
 li{
     margin-left: 20px;
@@ -126,26 +133,21 @@ display: grid;
 place-items: center;
 }
 .semitxt p{
-        width: 60%;
         margin: 2em;
         opacity: 0.9;
-        justify-content: center;
-        background-color: rgb(94, 115, 135);
-        border-radius: 20px;
-        box-shadow: 0px 0px 5px 5px rgba(41, 129, 183, 0.568);
-        border-style: none;
+        text-align: center;
         /*box-shadow: 0px 0px 30px 30px rgba(159, 210, 122, 0.5);
         */
 }
 .semitxt h4{
-    width: 100%;
-    background-color: rgba(108, 193, 108, 0.705);
-    box-shadow: 0px 0px 5px 5px rgba(41, 183, 62, 0.568);
+    width: 80%;
+    background-color: rgba(41, 183, 62, 0.568);
+    box-shadow: 0px 0px 5px 5px rgba(30, 143, 47, 0.568);
     border-style: none;
     border-radius: 15px;
     padding: 20px;
     margin-top: 5%;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
     text-align: center;
 }
 .semitxt h2{
@@ -156,14 +158,19 @@ place-items: center;
     border-radius: 20px;
     padding: 20px;
     margin-top: 5%;
-    margin-left: 10%;
     text-align: center;
+}
 
+.semicont{
+    width: 60%;
+    background-color: rgb(94, 115, 135);
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px 5px rgba(41, 129, 183, 0.568);
+    border-style: none;
 }
 /*REGISTRO*/
 
 .wrapper {
-   
     margin: auto;
     display: grid;
     place-items: center;
@@ -274,10 +281,12 @@ place-items: center;
 
 #send {
     opacity: 0.7;
+    color: black;
 }
 
 #send:hover {
     opacity: 1;
+    color: black;
 }
 
 .prueba{
