--- a/FRONTEND/semillita/src/App.css
+++ b/FRONTEND/semillita/src/App.css
@@ -2,64 +2,98 @@
 
 * {
     font-family: 'Press Start 2P', cursive;
+    color: rgb(240, 243, 245);
 }
 
 body {
     background: url(./imagenes/background-nube.png);
-    color: aliceblue;
+    overflow: visible;
 }
 
+h1 {
+    font-size: 4em;
+    margin: 25px;
+}
+.subtitulo {
+   
+    width: 80%;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+    border-style: none;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 5%;
+    margin-left: 10%;
+    text-align: center;
+}
 /*Header y nav*/
 
-.a {
-    margin-top: 10px;
-    width: 30%;
+link {
+    text-decoration: none;
 }
 
-.b {
-    margin-top: 10px;
-    margin-left: 0px;
-    width: 200%;
+
+.nompag {
+    display: flex;
+    flex-direction: row;
 }
 
-.c {
-    margin-top: 55px;
-    width: 200px;
-    height: 150px;
+.img {
+    margin-top: 30px;
+    margin-left: 30px;
+    background-color:rgb(229, 229, 229);
+    border-radius: 90%;
+    min-width: 10%;
+    max-width: 30%;
+    
 }
+
+.semillita {
+    margin-top: 40px;
+    margin-left: -20%;
+    min-width: 20%;
+    max-width: 100%;
+}
+
+
 
 .centrar-imagen{
     margin: 0 auto;
     display: table;
 }
 
-.kd {
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-}
+/* ESTILOS NAVBAR */
 
 .navv {
-
-    text-align: center;
-    justify-content: center;
-    background-color: #c4d8b4;
-    font-size:x-large ;
+    display: grid;
+    align-items: center;
+    background-color: rgb(179, 231, 187);
+    font-size:large ;
     min-height: 100%;
     width: 80%;
     margin: 5%;
-    opacity: 0.9;
-    height: 80px;
-    padding-top: 15px;
+    margin-left: 10%;
+    opacity: 0.8;
+    height: 60px;
+    padding-top: 10px;
+    border-radius: 20px;
 }
+
+.navv:hover {
+    background-color:rgb(179, 231, 187);
+    opacity: 1.0;
+}
+
+
 li{
     margin-left: 20px;
     margin-right: 20px;
 }
 
-.navv:hover {
-    opacity: 1.0;
+
+li:hover {
+
+    background-color: rgb(148, 230, 169) ;
 }
 /*Footer*/
 
@@ -92,7 +126,48 @@ footer {
     justify-content: space-around;
 
 }
+/*Index*/
+.semi,
+.semitxt{
+display: grid;
+place-items: center;
+}
+.semitxt p{
+        margin: 2em;
+        opacity: 0.9;
+        text-align: center;
+        /*box-shadow: 0px 0px 30px 30px rgba(159, 210, 122, 0.5);
+        */
+}
+.semitxt h4{
+    width: 80%;
+    background-color: rgba(41, 183, 62, 0.568);
+    box-shadow: 0px 0px 5px 5px rgba(30, 143, 47, 0.568);
+    border-style: none;
+    border-radius: 15px;
+    padding: 20px;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    text-align: center;
+}
+.semitxt h2{
+    width: 80%;
+    background-color: rgb(61, 148, 54);
+    box-shadow: 0px 0px 5px 5px rgba(61, 148, 54, 0.7);
+    border-style: none;
+    border-radius: 20px;
+    padding: 20px;
+    margin-top: 5%;
+    text-align: center;
+}
 
+.semicont{
+    width: 60%;
+    background-color: rgb(94, 115, 135);
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px 5px rgba(41, 129, 183, 0.568);
+    border-style: none;
+}
 /*REGISTRO*/
 
 .wrapper {
@@ -130,13 +205,14 @@ footer {
     text-align: center;   
 }
 
-.columna1 p {
+.columna1 label {
     color: black;
-    margin-bottom: 25px;
+    margin-top: 20px;
 }
 
 /*BOTON ANIMADO REGISTRARSE*/
 #btn1 {
+    margin-top: 20px;
     width: 60%;
     height: 10%;
     color: black;
@@ -205,10 +281,12 @@ footer {
 
 #send {
     opacity: 0.7;
+    color: black;
 }
 
 #send:hover {
     opacity: 1;
+    color: black;
 }
 
 .prueba{
@@ -244,7 +322,6 @@ footer {
 
 
 .MiR,
-.DM,
 .PR,
 .AV,
 .MaR {
@@ -263,7 +340,6 @@ footer {
 /*ANIMACION NOSOTROS*/
 
 .MiR:hover,
-.DM:hover,
 .PR:hover,
 .AV:hover,
 .MaR:hover {
@@ -283,7 +359,9 @@ footer {
     flex-direction: row;
     justify-content: space-evenly   ;
 }
-
+.MiR .ID{
+    background-image: url("./imagenes/MIR.png");
+}
 .ID {
     width: 50%;
     border-radius: 100%;
