--- a/FRONTEND-REACT/semillita/src/App.css
+++ b/FRONTEND-REACT/semillita/src/App.css
@@ -10,6 +10,7 @@ body {
     overflow: visible;
 }
 
+
 h1 {
     font-size: 4em;
     margin: 25px;
@@ -185,6 +186,13 @@ place-items: center;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    animation: fadeIn 4s;
+    
+}
+
+@keyframes fadeIn{
+    0%{ opacity: 0;}
+    100%{opacity: 1;}
 }
 
 .tabla1 {
@@ -192,6 +200,7 @@ place-items: center;
     width: 78%;
     margin-right: 1em;
     margin-left: 1em;
+    animation: fadeIn 14s;
 }
 
 .col {
@@ -208,6 +217,37 @@ place-items: center;
 .columna1 label {
     color: black;
     margin-top: 20px;
+}
+
+.imagen_registro{
+
+    
+    width: 50%;
+    height: 50%;
+    margin-left: 7em;
+    margin-top: 2em;
+    display: block;
+    background-image: url(./imagenes/semillita_logo.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+
+}
+
+.texto_login{
+
+    
+    width: 100%;
+    height: 5em;
+    margin-top: 3em;
+    margin-left: 2em;
+    text-align: center;
+    display: block;
+}
+
+.texto_login label{
+
+    color:black;
 }
 
 /*BOTON ANIMADO REGISTRARSE*/
